# NC-IDE

./: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  NcIdeNative.csproj  README.md  build.ps1  electron.vite.config.ts  implementation_plan.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
Architecture/: arch.md
BackendServices/: AiAssistant.cs
Core/: ExecutionService.cs  FileManager.cs  GitService.cs  SearchService.cs  SettingsManager.cs  ThemeManager.cs  WorkspaceManager.cs
Design.md/: week1.md  week2.md  week3.md  week4.md  week5.md
Engines/: TerminalService.cs
ExtensionMarketplace/: PluginLoader.cs
ExtensionMarketplace/Api/: IExtension.cs  IExtensionContext.cs
LanguageSupport/: CompletionData.cs  LanguageServerRegistry.cs  LspService.cs
LanguageSupport/UI/: TextMarkerService.cs
Models/: ChatMessage.cs  EditorTab.cs  FileTreeNode.cs  GitChange.cs  SearchResult.cs  SidebarViewType.cs
UI/Converters/: EnumToVisibilityConverter.cs
UI/Themes/: DarkTheme.xaml  LightTheme.xaml
UI/ViewModels/: MainViewModel.cs  ObservableObject.cs  RelayCommand.cs
UI/Views/: MainWindow.xaml  MainWindow.xaml.cs
docs/wiki/: Home.md
legacy-cpp/: BUILD.md  CMakeLists.txt  build.ps1  compile_commands.json
legacy-cpp/docs/: BUILD.md  week6.md
legacy-cpp/resources/themes/: dark.json
legacy-cpp/src/: MainWindow.cpp  MainWindow.h  main.cpp  moc_ActivityBar.cpp  moc_AiAssistant.cpp  moc_AiPanel.cpp  moc_App.cpp  moc_BottomPanel.cpp  moc_BreadcrumbBar.cpp  moc_BuildManager.cpp  moc_CodeEditor.cpp  moc_CommandPalette.cpp  moc_CommitDialog.cpp  moc_DebugConsolePanel.cpp  moc_DebugManager.cpp  moc_EditorArea.cpp  moc_EditorGroup.cpp  moc_ExplorerView.cpp  moc_ExtensionManager.cpp  moc_ExtensionsView.cpp  moc_GitManager.cpp  moc_LspClient.cpp  moc_MainWindow.cpp  moc_NetworkManager.cpp  moc_ProblemsPanel.cpp  moc_ProjectSearchEngine.cpp  moc_RunDebugView.cpp  moc_RunManager.cpp  moc_SearchView.cpp  moc_SessionManager.cpp  moc_SettingsPanel.cpp  moc_Sidebar.cpp  moc_SourceControlPanel.cpp  moc_SourceControlView.cpp  moc_StatusBar.cpp  moc_SyntaxHighlighter.cpp  moc_TabManager.cpp  moc_TerminalPanel.cpp  moc_ThemeManager.cpp  moc_WorkspaceManager.cpp
legacy-cpp/src/ai/: AiAssistant.cpp  AiAssistant.h  AiPanel.cpp  AiPanel.h
legacy-cpp/src/commands/: CommandRegistry.cpp  CommandRegistry.h
legacy-cpp/src/core/: App.cpp  App.h  FileManager.cpp  FileManager.h  FileTypeRegistry.cpp  FileTypeRegistry.h  NetworkManager.cpp  NetworkManager.h  NotificationManager.cpp  NotificationManager.h  ThemeManager.cpp  ThemeManager.h
legacy-cpp/src/debug/: BuildManager.cpp  BuildManager.h  DebugManager.cpp  DebugManager.h  ProblemParser.cpp  ProblemParser.h  RunDebugView.cpp  RunDebugView.h  RunManager.cpp  RunManager.h
legacy-cpp/src/explorer/: ExplorerView.cpp  ExplorerView.h
legacy-cpp/src/extensions/: ExtensionAPI.h  ExtensionManager.cpp  ExtensionManager.h  ExtensionsView.cpp  ExtensionsView.h  PluginLoader.cpp  PluginLoader.h
legacy-cpp/src/language/: AutoCompleter.cpp  AutoCompleter.h  CodeFormatter.cpp  CodeFormatter.h  LspClient.cpp  LspClient.h
legacy-cpp/src/scm/: CommitDialog.cpp  CommitDialog.h  GitManager.cpp  GitManager.h  SourceControlView.cpp  SourceControlView.h
legacy-cpp/src/search/: ProjectSearchEngine.cpp  SearchManager.h  SearchView.cpp  SearchView.h
legacy-cpp/src/services/: ServiceLocator.h
legacy-cpp/src/settings/: SettingsManager.cpp  SettingsManager.h  SettingsPanel.cpp  SettingsPanel.h
legacy-cpp/src/tabs/: EditorTab.cpp  TabManager.cpp  TabManager.h
legacy-cpp/src/terminal/: TerminalPanel.cpp  TerminalPanel.h
legacy-cpp/src/workbench/: CommandPalette.cpp  CommandPalette.h
legacy-cpp/src/workbench/activitybar/: ActivityBar.cpp  ActivityBar.h
legacy-cpp/src/workbench/editor/: BreadcrumbBar.cpp  BreadcrumbBar.h  CodeEditor.cpp  EditorArea.cpp  EditorArea.h  EditorGroup.cpp  EditorGroup.h  LineNumberArea.cpp  LineNumberArea.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
legacy-cpp/src/workbench/panels/: BottomPanel.cpp  BottomPanel.h  DebugConsolePanel.cpp  DebugConsolePanel.h  ProblemsPanel.cpp  ProblemsPanel.h
legacy-cpp/src/workbench/sidebar/: Sidebar.cpp  Sidebar.h
legacy-cpp/src/workbench/statusbar/: StatusBar.cpp  StatusBar.h
legacy-cpp/src/workspace/: SessionManager.cpp  WorkspaceManager.cpp  WorkspaceManager.h  WorkspaceState.cpp  WorkspaceState.h
legacy-cpp/templates/cpp/: CMakeLists.txt  main.cpp
legacy-cpp/templates/cpp/.ncide/: runconfig.json
legacy-cpp/templates/java/: Main.java
legacy-cpp/templates/java/.ncide/: runconfig.json
legacy-cpp/templates/node/: index.js  package.json
legacy-cpp/templates/node/.ncide/: runconfig.json
legacy-cpp/templates/python/: main.py
legacy-cpp/templates/python/.ncide/: runconfig.json
legacy-cpp/templates/web/: index.html  script.js  style.css
legacy-cpp/templates/web/.ncide/: runconfig.json
resources/themes/: light.json
src/: App.tsx  MainWindow.cpp  MainWindow.h  main.cpp  moc_CodeEditor.cpp  moc_MainWindow.cpp  moc_SearchManager.cpp  moc_SessionManager.cpp  moc_SettingsManager.cpp  moc_SyntaxHighlighter.cpp
src/editor/: CodeEditor.cpp  CodeEditor.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/main/: main.ts  menu.ts
src/preload/: preload.ts
src/renderer/: App.tsx  index.html
src/search/: ProjectSearchEngine.h  SearchManager.cpp  SearchManager.h
(+31 files in other folders)
